# research-agent

./: .gitignore  README.md  pyproject.toml  test.py
agent/: core.py  memory.py  tools.py
